--- a/fileasli.html
+++ b/fileasli.html
@@ -515,7 +515,7 @@
                     },
                 };
                 
-                const apiKey = "";
+                const apiKey = "AIzaSyA8Zf3OVkG6jpc8TFeNQMGKV8s1-VBx1wQ";
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
 
                 for (let i = 0; i < retries; i++) {
