--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="en" class="scroll-smooth">
 <head>
     <script>
-        // Early theme initializer: run before CSS to avoid FOUC and ensure dark class is present
+        // Early theme initializer: default to light to avoid unexpected system-driven dark mode on GitHub Pages.
+        // Only enable dark if the user explicitly stored 'dark' in localStorage.
         (function(){
             try {
                 var stored = localStorage.getItem('theme');
                 if (stored === 'dark') {
                     document.documentElement.classList.add('dark');
-                } else if (!stored && window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-                    document.documentElement.classList.add('dark');
                 }
+                // if no stored value, leave it light by default
             } catch (e) {
                 // ignore
             }
@@ -68,6 +68,33 @@
             max-width: 42rem; /* max-w-2xl */
             margin-left: auto;
             margin-right: auto;
+        }
+
+    /* h3 headings inside panels: theme-aware */
+    .section-h3 { font-weight: 800; margin-bottom: 1rem; color: var(--text); }
+        /* Contact (email) pill - responsive and truncating on small screens */
+        .contact-row { display: inline-flex; align-items: center; gap: 0.6rem; }
+        .contact-pill {
+            background-color: rgba(17,24,39,0.85); /* dark-ish pill */
+            color: #ffffff;
+            padding: 0.6rem 1rem;
+            border-radius: 0.6rem;
+            font-weight: 600;
+            display: inline-block;
+            max-width: 28rem;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+        .copy-btn { flex: none; }
+        @media (max-width: 767px) {
+            .contact-row { display: flex; flex-direction: column; align-items: stretch; gap: 0.5rem; }
+            .contact-pill { display: block; width: 100%; text-align: center; }
+            .copy-btn { width: 100%; }
+            #copy-feedback { text-align: center; }
+            /* Larger tap targets on small screens */
+            .copy-btn { padding: 0.75rem 1rem; font-size: 1rem; border-radius: 0.6rem; }
+            .contact-pill { font-size: 0.95rem; padding: 0.75rem 1rem; }
         }
 
         /* Skill badges: readable, rounded, with subtle hover */
@@ -168,6 +195,33 @@
           /* Headings and precise elements */
           html.dark .section-title { color: var(--text) !important; }
           html.dark .section-subtitle { color: var(--muted) !important; }
+          /* Mobile improvements */
+          #mobile-menu {
+              max-height: 0;
+              overflow: hidden;
+              opacity: 0;
+              transform: translateY(-6px);
+              transition: max-height 0.38s ease, opacity 0.28s ease, transform 0.28s ease;
+              pointer-events: none;
+          }
+          #mobile-menu.open {
+              max-height: 800px; /* enough to show menu items */
+              opacity: 1;
+              transform: none;
+              pointer-events: auto;
+          }
+          /* Make primary CTAs full-width on small screens for easier tapping */
+          .mobile-cta { display: inline-block; }
+          @media (max-width: 767px) {
+              .mobile-cta { display: block; width: 100%; text-align: center; margin-bottom: 0.75rem; }
+              .hero-gradient .text-4xl { font-size: 2rem; }
+              .hero-gradient img { width: 10.5rem; height: 10.5rem; }
+              .project-card { padding: 1rem; }
+              .skill-badge { padding: 0.4rem 0.75rem; font-size: 0.8rem; }
+              /* Make AI generator controls stack nicely */
+              #ai-tester .flex { flex-direction: column; }
+              #generate-btn { width: 100%; }
+          }
           /* Inline-styled h3 headings: normalize to CSS variable */
           html.dark h3[style] { color: var(--text) !important; }
           /* CTA buttons */
@@ -194,17 +248,17 @@
                     </svg>
                 </button>
             </div>
-            <button id="mobile-menu-button" class="md:hidden">
+            <button id="mobile-menu-button" class="md:hidden" aria-controls="mobile-menu" aria-expanded="false">
                 <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path></svg>
             </button>
         </nav>
-            <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
+            <div id="mobile-menu" class="md:hidden px-6 pb-4" aria-hidden="true">
             <a href="#tentang" class="nav-link block py-2 text-slate-600 hover:text-gray-800">About</a>
             <a href="#keahlian" class="nav-link block py-2 text-slate-600 hover:text-gray-800">Skills</a>
             <a href="#projek" class="nav-link block py-2 text-slate-600 hover:text-gray-800">Projects</a>
             <a href="#ai-tester" class="nav-link block py-2 text-slate-600 hover:text-gray-800">AI Tester</a>
             <a href="#pengalaman" class="nav-link block py-2 text-slate-600 hover:text-gray-800">Experience</a>
-            <a href="#kontak" class="block mt-2 bg-gray-900 text-white text-center px-4 py-2 rounded-lg hover:bg-gray-800">Contact Me</a>
+            <a href="#kontak" class="mobile-cta mt-2 bg-gray-900 text-white text-center px-4 py-2 rounded-lg hover:bg-gray-800">Contact Me</a>
         </div>
     </header>
 
@@ -223,8 +277,8 @@
                         Informatics graduate focused on software quality. I excel at finding bugs, ensuring performance, and improving user experience through manual and automated testing.
                     </p>
                     <div class="mt-8 flex justify-center md:justify-start gap-4">
-                        <a href="#projek" class="bg-gray-900 text-white px-7 py-3 rounded-lg font-semibold hover:bg-gray-800 transition-all duration-300 shadow-lg hover:-translate-y-1">View My Projects</a>
-                        <a href="Resume.pdf" target="_blank" class="bg-white text-slate-700 px-7 py-3 rounded-lg font-semibold border border-slate-300 hover:bg-slate-100 transition-all duration-300 hover:-translate-y-1">Download Resume</a>
+                        <a href="#projek" class="mobile-cta bg-gray-900 text-white px-7 py-3 rounded-lg font-semibold hover:bg-gray-800 transition-all duration-300 shadow-lg hover:-translate-y-1">View My Projects</a>
+                        <a href="Resume.pdf" target="_blank" class="mobile-cta bg-white text-slate-700 px-7 py-3 rounded-lg font-semibold border border-slate-300 hover:bg-slate-100 transition-all duration-300 hover:-translate-y-1">Download Resume</a>
                     </div>
                 </div>
                 <div class="flex justify-center order-1 md:order-2">
@@ -242,21 +296,21 @@
             </div>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-8" style="margin-top: 1rem;">
                 <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300">
-                    <h3 class="text-xl" style="font-weight:800; margin-bottom:1rem; color:#0f172a;">Test Automation</h3>
+                    <h3 class="text-xl section-h3">Test Automation</h3>
                     <p class="text-slate-600 mb-4">Building test scripts for efficiency and accuracy.</p>
                     <div class="flex flex-wrap">
                         <span class="skill-badge">Katalon Studio</span> <span class="skill-badge">Playwright</span> <span class="skill-badge">Selenium</span> <span class="skill-badge">Cypress</span>
                     </div>
                 </div>
                 <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300">
-                    <h3 class="text-xl" style="font-weight:800; margin-bottom:1rem; color:#0f172a;">Performance & Manual Testing</h3>
+                    <h3 class="text-xl section-h3">Performance & Manual Testing</h3>
                     <p class="text-slate-600 mb-4">Ensuring the application runs fast and behaves as expected.</p>
                     <div class="flex flex-wrap">
                         <span class="skill-badge">JMeter</span> <span class="skill-badge">Test Case Design</span> <span class="skill-badge">Load Testing</span> <span class="skill-badge">Stress Testing</span>
                     </div>
                 </div>
                 <div class="bg-white p-8 rounded-xl shadow-lg hover:shadow-2xl hover:-translate-y-2 transition-all duration-300">
-                    <h3 class="text-xl" style="font-weight:800; margin-bottom:1rem; color:#0f172a;">Tools & Others</h3>
+                    <h3 class="text-xl section-h3">Tools & Others</h3>
                     <p class="text-slate-600 mb-4">Supporting tools to keep workflows smooth.</p>
                     <div class="flex flex-wrap">
                         <span class="skill-badge">Jira</span> <span class="skill-badge">QMeter</span> <span class="skill-badge">Laravel</span> <span class="skill-badge">Vue JS</span>
@@ -323,7 +377,7 @@
                 
                 <div class="my-6 flex items-center text-center">
                     <hr class="flex-grow border-slate-300">
-                    <span class="mx-4 text-slate-500 font-semibold">ATAU</span>
+                    <span class="mx-4 text-slate-500 font-semibold">OR</span>
                     <hr class="flex-grow border-slate-300">
                 </div>
 
@@ -363,9 +417,11 @@
             <div class="text-center bg-slate-800 text-white rounded-2xl p-12 max-w-4xl mx-auto shadow-2xl">
                 <h2 class="text-3xl md:text-4xl font-extrabold">Let's Connect!</h2>
                 <p class="text-lg text-slate-300 mt-4 mb-8 max-w-2xl mx-auto">I'm open to conversations, collaborations, and new opportunities. Feel free to reach out.</p>
-                <a href="mailto:triantoangga180@gmail.com" class="text-xl font-semibold bg-gray-700 px-8 py-4 rounded-lg hover:bg-gray-600 transition-all duration-300">
-                    triantoangga180@gmail.com
-                </a>
+                <div class="contact-row">
+                    <a id="contact-email-link" href="#" class="contact-pill" aria-label="Send email" title="Send email">&nbsp;</a>
+                    <button id="copy-email-btn" class="copy-btn text-sm bg-white text-slate-700 px-3 py-2 rounded-lg border border-slate-300 hover:bg-slate-100 transition" aria-label="Copy email">Copy</button>
+                    <span id="copy-feedback" class="text-sm text-slate-300 hidden">Copied!</span>
+                </div>
                 <div class="flex justify-center space-x-6 mt-10">
                     <a href="https://linkedin.com/in/angga-trianto-51825a237" target="_blank" class="text-slate-400 hover:text-white transition duration-300">
                         <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path fill-rule="evenodd" d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" clip-rule="evenodd"/></svg>
@@ -381,7 +437,7 @@
 
     <footer class="bg-slate-900 text-slate-400 py-8">
         <div class="container mx-auto px-6 text-center">
-            <p>&copy; <span id="year"></span> Angga Trianto. Dibuat dengan penuh ketelitian.</p>
+            <p>&copy; <span id="year"></span> Designed by Angga Trianto.</p>
         </div>
     </footer>
     
