--- a/index.html
+++ b/index.html
@@ -465,26 +465,26 @@
                 </style>
                 <div class="space-y-4">
                     <div class="cert-row">
-                        <div class="cert-provider text-slate-800 dark:text-slate-100">Eduwork<br><span class="cert-year">2021</span></div>
+                        <div class="cert-provider text-slate-800 dark:text-slate-100">Sanbercode<br><span class="cert-year">2022</span></div>
                         <div class="cert-detail text-slate-700 dark:text-slate-300">
-                            <div class="font-semibold">QA Engineer (Free Class)</div>
-                            <div class="text-sm">Learned QA fundamentals, test case writing, and practical automation using Cypress.</div>
+                            <div class="font-semibold">Quality Assurance</div>
+                            <div class="text-sm">Learned QA fundamentals, test case writing, and practical automation using Selenium.</div>
                         </div>
                         <div>
-                            <a class="cert-download" href="./cert-eduwork-2021.pdf" download aria-label="Download Eduwork certificate">
+                            <a class="cert-download" href="AnggaTrianto_Certificate-Sanbercode-SQA.pdf" download aria-label="Download Sanbercode 2022 certificate">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 3v12"/><path stroke-linecap="round" stroke-linejoin="round" d="M8 11l4 4 4-4"/><path stroke-linecap="round" stroke-linejoin="round" d="M21 21H3"/></svg>
                             </a>
                         </div>
                     </div>
                     <hr class="border-slate-200 dark:border-slate-700" />
                     <div class="cert-row">
-                        <div class="cert-provider text-slate-800 dark:text-slate-100">Sanbercode<br><span class="cert-year">2022</span></div>
+                                                <div class="cert-provider text-slate-800 dark:text-slate-100">Eduwork<br><span class="cert-year">2021</span></div>
                         <div class="cert-detail text-slate-700 dark:text-slate-300">
-                            <div class="font-semibold">Quality Assurance</div>
-                            <div class="text-sm">No. 248/13/SNBR/BOOTCAMP-KR/X/2022 — Learned QA fundamentals, test case writing, and practical automation using Selenium.</div>
+                            <div class="font-semibold">QA Engineer</div>
+                            <div class="text-sm">Learned QA fundamentals, test case writing, and practical automation using Cypress.</div>
                         </div>
                         <div>
-                            <a class="cert-download" href="./cert-sanbercode-2022.pdf" download aria-label="Download Sanbercode 2022 certificate">
+                            <a class="cert-download" href="AnggaTrianto_Certificate-Eduwork-SQA.pdf" download aria-label="Download Eduwork certificate">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 3v12"/><path stroke-linecap="round" stroke-linejoin="round" d="M8 11l4 4 4-4"/><path stroke-linecap="round" stroke-linejoin="round" d="M21 21H3"/></svg>
                             </a>
                         </div>
@@ -494,10 +494,10 @@
                         <div class="cert-provider text-slate-800 dark:text-slate-100">Sanbercode<br><span class="cert-year">2021</span></div>
                         <div class="cert-detail text-slate-700 dark:text-slate-300">
                             <div class="font-semibold">Laravel + Vue JS</div>
-                            <div class="text-sm">No. 17461/68/BDG/P-SNBR/CODE/2021</div>
+                            <div class="text-sm">Laravel & Vue.js Crowdfunding Website Development</div>
                         </div>
                         <div>
-                            <a class="cert-download" href="./cert-sanbercode-2021.pdf" download aria-label="Download Sanbercode 2021 certificate">
+                            <a class="cert-download" href="AnggaTrianto_Certificate-Eduwork-VUEJS.pdf" download aria-label="Download Sanbercode 2021 certificate">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path stroke-linecap="round" stroke-linejoin="round" d="M12 3v12"/><path stroke-linecap="round" stroke-linejoin="round" d="M8 11l4 4 4-4"/><path stroke-linecap="round" stroke-linejoin="round" d="M21 21H3"/></svg>
                             </a>
                         </div>
